Add payment and reminder services